--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div>
   <h1>Hello Universe!</h1>
 
-  <h2>Welcome to my site</h2>
+  <h2>Welcome to my website</h2>
 
   <!-- image of a duck -->
   <img src="duck.jpg" width="200px">
